--- a/assignment-1/login.html
+++ b/assignment-1/login.html
@@ -4,6 +4,7 @@
 		<title>Login Page</title>
 	</head>
 	<body>
+		<h1>Login</h1>
 		<form action="login.php" method="POST">
 			<p>
 				<label>Username</label>
