--- a/assignment-1/signup.html
+++ b/assignment-1/signup.html
@@ -4,6 +4,7 @@
 		<title>Sign Up Page</title>
 	</head>
 	<body>
+		<h1>Register</h1>
 		<form action="signup.php" method="POST" enctype="multipart/form-data">
 			<p>
 				<label>Username</label>
